Program is running. Work on the actual operator Work on callbacks Work on IterationFeedback